cabal-version:      2.4
name:               haskell-playground
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-2.0-only
license-file:       LICENSE
author:             Christian Berrig
maintainer:         chrberrig@protonmail.com

-- A copyright notice.
-- copyright:
category:           Math
extra-source-files: CHANGELOG.md

executable haskell-playground
    main-is:          Main.lhs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.11.1.0
    hs-source-dirs:   app
    default-language: Haskell2010

Test-suite tests
    type: exitcode-stdio-1.0
    ghc-options: -Wall
    hs-source-dirs: test
    main-is:    Tests.hs
    build-depends: base, HUnit
    default-language: Haskell2010
